--- a/Pages/WatchtowerApp.razor
+++ b/Pages/WatchtowerApp.razor
@@ -12,16 +12,7 @@
 } else {
     @foreach (var host in hosts)
     {
-        <div>
-            <h3>@host.hostname</h3>
-            <p>@host.Resources(client).Count @(host.Resources(client).Count == 1 ? "resource" : "resources")</p>
-        </div>
-        @foreach (var resource in host.Resources(client))
-        {
-            <div>
-                <h4>@resource.method @resource.path</h4>
-            </div>
-        }
+        <HostComponent host=@host client=@client />
     }
 }
 
