Moved server to separate directory; nicer menu.

--- a/Watchtower.Server/Components/HostComponent.razor
+++ b/Watchtower.Server/Components/HostComponent.razor
@@ -5,7 +5,10 @@
 @if (loaded) {
     <div>
         <h3>@host.hostname</h3>
-        <p>@Resources.Count @(Resources.Count == 1 ? "resource" : "resources")</p>
+        <p>
+            <span>@Resources.Count @(Resources.Count == 1 ? "resource" : "resources")</span>
+            <button class="btn btn-sm btn-primary"><i class="bi bi-plus-circle"/></button>
+        </p>
 
         @foreach (var resource in Resources)
         {
