--- a/Watchtower.Server/Shared/NavMenu.razor
+++ b/Watchtower.Server/Shared/NavMenu.razor
@@ -11,17 +11,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="bi bi-house-fill" aria-hidden="true"/> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="app">
+                <i class="bi bi-house-fill" aria-hidden="true"/> App
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="hosts">
+                <i class="bi bi-pc" aria-hidden="true"/> Hosts
             </NavLink>
         </div>
     </nav>
