--- a/Watchtower.Server/Pages/WatchtowerApp.razor
+++ b/Watchtower.Server/Pages/WatchtowerApp.razor
@@ -27,7 +27,7 @@
         var currentdir = Directory.GetCurrentDirectory();
         var credentials = System.IO.File.ReadAllText($"{currentdir}/mongodb.txt");
 
-        var settings = MongoClientSettings.FromConnectionString($"mongodb+srv://{credentials}@watchtower.tbosq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority");
+        var settings = MongoClientSettings.FromConnectionString($"mongodb+srv://{credentials}@watchtower.tbosq.mongodb.net/Watchtower?retryWrites=true&w=majority");
         settings.ServerApi = new ServerApi(ServerApiVersion.V1);
         client = new MongoClient(settings);
         database = client.GetDatabase("Main");
