Store all hosts in a Realm class (#14)

--- a/Watchtower.Server/Components/HostComponent.razor
+++ b/Watchtower.Server/Components/HostComponent.razor
@@ -33,7 +33,7 @@
     [ParameterAttribute]
     public WatchtowerHost? host { get; set; }
     [ParameterAttribute]
-    public MongoClient? client { get; set; }
+    public IMongoClient? client { get; set; }
     public List<WatchtowerResource> Resources { get; set; }
     public bool loaded { get; set; }
 
