Load resources and requests when component appears. (#14)

--- a/Watchtower.Server/Pages/WatchtowerApp.razor
+++ b/Watchtower.Server/Pages/WatchtowerApp.razor
@@ -13,7 +13,7 @@
     <table>
     @foreach (var host in Realm.Hosts)
     {
-        <HostComponent host=@host client=@Realm.Client />
+        <HostComponent host=@host />
     }
     </table>
 }
