--- a/Watchtower.Server/Components/HostComponent.razor
+++ b/Watchtower.Server/Components/HostComponent.razor
@@ -25,7 +25,7 @@
     </tr>
     @foreach (var resource in host.Resources)
     {
-        <ResourceComponent client=@client resource=@resource />
+        <ResourceComponent resource=@resource />
     }
 }
 
@@ -38,6 +38,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        host.FetchResources();
         loaded = true;
     }
 }
