--- a/Watchtower.Server/Components/ResourceComponent.razor
+++ b/Watchtower.Server/Components/ResourceComponent.razor
@@ -35,6 +35,8 @@
         }
         </td>
     </tr>
+} else {
+    <tr><td colspan=7><i>Lastar inn ressursen…</i></td></tr>
 }
 
 @code {
@@ -60,7 +62,10 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Requests = resource.Requests(client);
+        if (this.resource == null) return;
+        this.resource.FetchRequests();
+        if (this.resource.Requests == null) return;
+        Requests = resource.Requests;
         Requests.Sort(delegate(WatchtowerRequest a, WatchtowerRequest b)
         {
             return -a.Timestamp.CompareTo(b.Timestamp);
